# mcps

pdf-mcp-server/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  blog-article.md  main.py  mcp.json  pyproject.toml  requirements.txt  test_server.py
pdf-mcp-server/.github/: pull_request_template.md
pdf-mcp-server/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
